# qhugo

./: CMakeLists.txt  README.md  filecontroller.cpp  filecontroller.h  lspclient.cpp  lspclient.h  lspdecorator.h  main.cpp  markdownhighlighter.cpp  markdownhighlighter.h
.github/workflows/: release.yml
backend/: backend.go  backend.h  go.mod  libbackend.h
backend/lsp/: manager.go
qml/: Editor.qml  FuzzyFinder.qml  Main.qml  Sidebar.qml
